--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 .container {
+  font-size: 32px;
   height: 100vh;
   width: 100vw;
   margin: 0;
@@ -14,6 +15,16 @@
   text-align: center;
 }
 
+.scores {
+  display: flex;
+  gap: 50px;
+}
+
+.btnContainer {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 button {
   background-color: cornsilk;
   border-radius: 10px;
@@ -26,5 +37,5 @@ button {
 
 button:active {
   box-shadow: 10px 2px 5px black;
-  transform: translateY(4px);
+  transform: translateY(4px) translateX(4px);
 }
